Implementace funkce clipování polygonu -vytvoření ClipPolygonController, SutherlandHodgmanClipper, ClipService, Geometry2D -přidání ClipPolygonController do tools.fxml a napojení do zbytku UI -Geometry2D slouží jako pomocná třída pro clip výpočty